<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallFlash</string>
    <string name="howToStr">How it works</string>
    <string name="callToggle">Call Notification</string>
    <string name="callFlashON">Enabled</string>
    <string name="callFlashOFF">Disabled</string>
    <string name="flashOnDuration">ON Duration (msec):</string>
    <string name="flashOffDuration">OFF Duration (msec):</string>
    <string name="msgToggle">Message Notification</string>
    <string name="msgFlashON">Enabled</string>
    <string name="msgFlashOFF">Disabled</string>
    <string name="aboutStr">About</string>
    <string name="donateStr">Support</string>
    <string name="titlePrefs">Preferences</string>
    <string name="aboutText">\n\nCallFlash controls the flash for calls and other notifications. It is an opensource project by Spiros Bondomitsidis,
        aiming to keep things simple and functional.\n\n

        For more information on how to use it, see “How it works”.\n\n

        Comments and updates at:\nforum.xda-developers.com/showthread.php?t=2403340\n\n

        Help with the translation of the app:\nhttp://crowdin.net/project/callflash/invite\n
    </string>
    <string name="aboutFooter">CallFlash \u00a9</string>
    <string name="allRightsReserved">All Rights Reserved.</string>
    <string name="titleAbout">About</string>
    <string name="titleHowTo">How it works</string>
    <string name="howTo1">1. Enable your preferred operation mode and test is using the test buttons.</string>
    <string name="howTo2">2. ON Duration: Select the duration (in milliseconds) for which the flash is ON.</string>
    <string name="howTo3">3. OFF Duration: Select the duration (in milliseconds) for which the flash is OFF.</string>
    <string name="howTo4">4. Set your preferences for calls or message notifications respectively.</string>
    <string name="logo">Application\'s Logo</string>
    <string name="FlashTestON">Stop Test</string>
    <string name="FlashTestOFF">Test Flash</string>
    <string name="preferences">Preferences</string>
    <string name="operation_mode">Operation mode</string>
    <string name="generalCateg">General Preferences</string>
    <string name="operation_mode_sum">Select when you want the flash to be enabled.</string>
    <string name="normal_mod_check">Phone not in silent or vibration mode.</string>
    <string name="normal_check">Normal</string>
    <string name="vibrate_check">Vibrate</string>
    <string name="vibrate_mod_check">Phone in vibration mode.</string>
    <string name="silent_check">Silent</string>
    <string name="silent_mod_check">Phone in silent mode.</string>
    <string name="sleep_start">Sleep time start</string>
    <string name="sleep_stop">Sleep time stop</string>
    <string name="sleep_check">Sleeping period</string>
    <string name="sleep_check_sum">Enable sleeping feature.</string>
    <string name="enable_toast">Enable an operation mode in preferences first…</string>
    <string name="notification_service">CallFlash Notification Service</string>
    <string name="Callseperator">Call Flash</string>
    <string name="Msgseperator">Notification Flash</string>
    <string name="titleCallPrefs">Call Flash Preferences</string>
    <string name="titleMsgPrefs">Notification Flash Preferences</string>
    <string name="typePrefCateg">Flash module preferences</string>
    <string name="typeList">Module driver</string>
    <string name="smsModeList">Notification flash mode</string>
    <string name="sms_mode_categ">General Preferences</string>
    <string name="sms_mode_list_1">Time based</string>
    <string name="sms_mode_list_2">Repetitive</string>
    <string name="sms_mode_list_value_1">Seconds</string>
    <string name="sms_mode_list_value_2">Times</string>
    <string name="type_list_1">Standard</string>
    <string name="type_list_2">Alternative</string>
    <string name="type_list_3">Alternative 2</string>
    <string name="smsModeListValue">Duration</string>
    <string name="smsModeListValueSum">In seconds or number of flashes.</string>
    <string name="titleDonate">Support dev</string>
    <string name="app_list_tittle">Application list</string>
    <string name="app_list_sum">Select which applications trigger the flash.</string>
    <string name="loadingApps">Loading applications…</string>
    <string name="AppList">Installed Applications</string>
    <string name="clear_all_button">Clear All</string>
    <string name="select_all_button">Select All</string>
    <string name="app_list_check">Flash on other Notifications</string>
    <string name="app_list_check_sum">Click here to disable “CallFlash Notification Service”.</string>
    <string name="sms_more_categ">Advanced Preferences</string>
    <string name="more_flash_warning_sum">Click here to enable “Notification Service”.</string>
    <string name="accessibility_service_description">Enabling this service will let CallFlash to detect your notifications in order to enable the flash
        according to your preferences.</string>


    <string name="donateTitle">Donate using Ads</string>
    <string name="donateDialog">"1. Choose to see the apps of the day\n2. Download any app you like\n3. You donated!\n…without spending a dime!\nAlternatively you can donate through Paypal."</string>
    <string name="first_time">First Time Settings</string>
    <string name="firstcontinue">Continue</string>
    <string name="first_time_desc">Welcome to Callflash, the application which controls your flash on every call or notification.\n\n<i><b>Please select the flash driver that works with your device.</b></i>\nAfter hitting “Test Flash” you must see your flash blinking three times. If it doesn’t change the driver with the dropdown list below.\n\nYou can change it afterwards from “Preferences”.\n(Prefer “Standard” over “Alternative” and “Alternative” over “Alternative 2”)</string>
    <string name="adColony">See an HD video!</string>
    <string name="adColonysum">App of the day by adColony…</string>
    <string name="bubble1">Enable Flash on Call and on Notification\nwith these buttons…\n</string>
    <string name="bubble2">Select the duration (in milliseconds)\nfor which the flash is ON and OFF,\nusing the sliders or the textfields…\n</string>
    <string name="bubble3">Test your settings using the test buttons…\n</string>
    <string name="bubble4">Edit the preferences of each section\nand you are done!\n</string>
    <string name="adMob">Free Apps!</string>
    <string name="adMobsum">Free apps of the day by AdMob…</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="sound_profiles">Sound profile</string>
    <string name="screen_off">Screen is OFF</string>
    <string name="screen_off_sum">Flash if screen is either ON or OFF.</string>
    <string name="screen_off_ticked_sum">Flash only if screen OFF.</string>
    <string name="phone_state">Phone state</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="donate_dialog_title">Thank you for donating!</string>
    <string name="donate_dialog_ok">Got it!</string>
    <string name="paypal_donate">Paypal</string>
    <string name="paypal_donate_sum">Click here to donate through Paypal…</string>
    <string name="donateTitleCard">Donate via credit card</string>
    <string name="warning">Warning!</string>
    <string name="warning_screenoff">Enabling this option may cause flashing not to work properly. Applications that enable the screen when receiving a notification (such as viber…) will not trigger the flash.</string>
    <string name="enable_anyway">Enable anyway</string>
    <string name="update_now_label">Update</string>
    <string name="remind_me_later">Later</string>
    <string name="ignore">Ignore</string>
    <string name="please_rate">Please rate this app</string>
    <string name="rate_message">Help us improve this app by rating it and leaving a comment!</string>
    <string name="rate_button">Rate</string>
    <string name="screen_locked_ticked_sum">Flash only if phone is locked. Won’t work if phone security is set to “None”.</string>
    <string name="screen_locked_sum">Flash if phone is either locked or unlocked.</string>
    <string name="screen_locked">Phone lock status</string>
    <string name="low_bat_title">Off on low battery</string>
    <string name="low_bat_sum">Do not turn on flash if battery is low.</string>
    <string name="version">Version:</string>
    <string name="call_pref_general_categ">General Preferences</string>
    <string name="volume_button_disable_title">Volume button disable</string>
    <string name="volume_button_disable_sum">Clicking the volume buttons during a call will disable the flash (may require multiple clicks).</string>
    <string name="licenseStr">License</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>

</resources>
