<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".HowTo">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:weightSum="2">

            <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/callToggle"

                    android:textOn="@string/callFlashON"
                    android:textOff="@string/callFlashOFF"
                    android:layout_weight="1"/>

            <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/callToggle"

                    android:textOn="@string/FlashTestON"
                    android:textOff="@string/FlashTestOFF"
                    android:layout_weight="1"/>
        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/howTo1"
                android:id="@+id/textView"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="@dimen/main_panel_title"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/flashOnDuration"


                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

            <EditText
                    android:layout_width="@dimen/main_panel_value"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="250"
                    android:gravity="left"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>


            <SeekBar

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="250"
                    android:max="1000"
                    android:enabled="false"
                    android:clickable="false"
                    android:focusable="false"
                    android:longClickable="false"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/howTo2"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                />


        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:layout_width="@dimen/main_panel_title"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/flashOffDuration"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>

            <EditText
                    android:layout_width="@dimen/main_panel_value"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="250"
                    android:gravity="left"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>


            <SeekBar

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:progress="250"
                    android:max="1000"
                    android:enabled="false"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"/>
        </LinearLayout>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/howTo3"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"/>

        <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_preferences"
                android:enabled="true"
                android:layout_gravity="center"
                android:clickable="true"/>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/howTo4"
                android:layout_gravity="center_vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"/>
    </LinearLayout>

</ScrollView>
