<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainPanel">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="vertical">

        <org.jraf.android.backport.switchwidget.Switch
            android:text="@string/Callseperator"
            android:id="@+id/callFlashToggle"
            style="@style/my_separator"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="1"

            android:gravity="center_vertical">


            <ToggleButton
                style="@style/my_button"
                android:text="@string/callToggle"
                android:id="@+id/callFlashTestToggle"
                android:textOn="@string/FlashTestON"
                android:textOff="@string/FlashTestOFF"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_prefs"
                android:id="@+id/CallPref"
                android:enabled="true"
                android:clickable="true"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView

                style="@style/my_textView"
                android:text="@string/flashOnDuration"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <EditText
                style="@style/my_editText"
                android:id="@+id/flashOnDurationValue"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>


            <SeekBar

                style="@style/my_seekBar"
                android:id="@+id/flashOnDurationBar"
                android:max="1000"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <TextView
                style="@style/my_textView"
                android:text="@string/flashOffDuration"/>


            <EditText
                style="@style/my_editText"
                android:id="@+id/flashOffDurationValue"/>

            <SeekBar

                style="@style/my_seekBar"
                android:id="@+id/flashOffDurationBar"
                android:max="1000"
                />
        </LinearLayout>


        <org.jraf.android.backport.switchwidget.Switch
            android:text="@string/Msgseperator"
            android:id="@+id/msgFlashToggle"
            style="@style/my_separator"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center_vertical|center_horizontal">

        <ToggleButton
                style="@style/my_button"
                android:text="@string/msgToggle"
                android:id="@+id/msgFlashTestToggle"
                android:textOn="@string/FlashTestON"
                android:textOff="@string/FlashTestOFF"/>

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_prefs"
                android:id="@+id/MsgPref"
                android:clickable="true"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/my_textView"
                android:text="@string/flashOnDuration"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>

            <EditText
                style="@style/my_editText"
                android:id="@+id/flashOnDurationValueMsg"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>


            <SeekBar

                style="@style/my_seekBar"
                android:id="@+id/flashOnDurationBarMsg"
                android:max="1000"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                style="@style/my_textView"
                android:text="@string/flashOffDuration"/>

            <EditText
                style="@style/my_editText"
                android:id="@+id/flashOffDurationValueMsg"/>

            <SeekBar
                style="@style/my_seekBar"
                android:id="@+id/flashOffDurationBarMsg"
                android:max="1000"
                />

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:orientation="horizontal"-->
        <!--android:weightSum="3">-->

        <!--<TextView-->

        <!--style="@style/my_textView"-->
        <!--android:text="@string/msgFlashDuration"-->
        <!--android:id="@+id/flashDurationMsg"/>-->

        <!--<EditText-->
        <!--style="@style/my_editText"-->
        <!--android:id="@+id/flashDurationValueMsg"/>-->

        <!--<SeekBar-->

        <!--style="@style/my_seekBar"-->
        <!--android:id="@+id/flashDurationBarMsg"-->
        <!--android:max="10"-->
        <!--/>-->

        <!--</LinearLayout>-->
    </LinearLayout>
</ScrollView>
