<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom_buttons"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center|bottom">

        <Button
            style="@style/my_button"
            android:text="@string/FlashTestOFF"
            android:id="@+id/firstFlashTest"
            />

        <Button
            style="@style/my_button"
            android:id="@+id/firstcontinue"
            android:text="@string/firstcontinue"
            android:enabled="false"
            />

    </LinearLayout>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/module_list"
        android:layout_gravity="center"
        android:layout_above="@id/bottom_buttons"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        android:entries="@array/type_list"
        android:entryValues="@array/type_list_values"/>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scroll_view"
        android:layout_above="@id/module_list">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100sp"
                android:layout_centerHorizontal="true"
                android:layout_height="100sp"
                android:id="@+id/logo"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_launcher"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/logo"/>

            <TextView
                android:id="@+id/first_time_textview"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:layout_below="@id/logo"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/first_time_desc"
                android:gravity="center_vertical|center_horizontal"
                android:textAppearance="?android:attr/textAppearanceSmall"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>